@@ -1,0 +1,59 @@
+# -*- tcl -*-
+# Tcl Benchmark File
+#
+# This file contains a number of benchmarks for the 'asn' module.
+# This allow developers to monitor/gauge/track package performance.
+#
+# (c) 2005 Andreas Kupries <andreas_kupries@users.sourceforge.net>
+
+# We need at least version 8.2 for the package and thus the
+# benchmarks.
+
+if {![package vsatisfies [package provide Tcl] 8.4]} {
+    return
+}
+
+# ### ### ### ######### ######### ######### ###########################
+## Setting up the environment ...
+
+package forget log
+catch {namespace delete ::log}
+source [file join [file dirname [file dirname [info script]]] log log.tcl]
+
+package forget asn
+catch {namespace delete ::asn}
+source [file join [file dirname [info script]] asn.tcl]
+
+# ### ### ### ######### ######### ######### ###########################
+## Benchmarks.
+
+foreach n {
+    -10 -100 -1000 -10000 -100000 -1000000
+    0
+    10 100 1000 10000 100000 1000000
+} {
+    bench -desc "ASN Integer $n" -body {
+	asn::asnInteger $n
+    }
+
+    bench -desc "ASN Enum $n" -body {
+	asn::asnEnumeration $n
+    }
+
+    bench -desc "ASN Boolean $n" -body {
+	asn::asnBoolean $n
+    }
+}
+
+foreach n {10 100 1000 10000} {
+    bench -desc "ASN OctetString ${n}" -pre {
+	set str [string repeat X $n]
+    } -body {
+	asn::asnOctetString $str
+    } -post {
+	unset str
+    }
+}
+
+# ### ### ### ######### ######### ######### ###########################
+## Complete
