@@ -1,4 +1,4 @@
 # Tcl package index file, version 1.1
 
-if {![package vsatisfies [package provide Tcl] 8.2]} {return}
+if {![package vsatisfies [package provide Tcl] 8.4]} {return}
 package ifneeded asn 0.4 [list source [file join $dir asn.tcl]]
